# assessment-metadata-registry

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  purpose.md
.claude/: settings.json
.claude/agents/: consumption-lint.md  metadata-author.md  registry-librarian.md
.claude/hooks/: validate-metadata.sh
.cursor/: BUGBOT.md
.github/workflows/: R-CMD-check.yml  build-publish.yml  deploy-api.yml  deploy-vercel.yml  serve-checks.yml  validate.yml
r-pkg/amrr/: DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md
schemas/: amr.accountability.v2.schema.json  amr.accountability_system.v1.schema.json  amr.assessment.v2.schema.json  amr.assessment_system.v1.schema.json
schemas/examples/: algebra-i-eoc.v2.example.json  wida-access-in-2024.v2.example.json
schemas/sql/: amr-registry.v1.sql
serve/: .dockerignore  Caddyfile  Dockerfile.mcp  README.md  docker-compose.yml
serve/datasette/: metadata.yaml  render_metadata.sh
serve/deploy/: bootstrap-vps.sh  deploy.sh
serve/mcp/: pyproject.toml  registry_db.py  server.py  tool_schemas.json
serve/vercel/: .gitignore  .vercelignore  DEPLOY.md  local-server.ts  package-lock.json  package.json  tsconfig.json  vercel.json
site/: _common.R  _generate.R  _quarto.yml  _rules.scss  about.qmd  changelog.qmd  config-view.qmd  index.qmd  spec.qmd  theme-dark.scss  theme.scss  usage.qmd
site/assets/: head.html
tools/: _shared.R  build.R  build.py  parity_check.R  seed_demo.py  split_accountability.py  validate.R  validate.py
tools/archive/: README.md  (+1 more)
wiki/: index.md  log.md  schema.md
(+134 files in other folders)
